// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`can handle two gamepads with same id 1`] = `
[
  {
    "connectionIndex": 0,
    "id": "test",
    "inUse": true,
    "type": "primary",
  },
  {
    "connectionIndex": 1,
    "id": "test",
    "inUse": true,
    "type": "secondary",
  },
]
`;

exports[`update selected gamepad 1`] = `
[
  {
    "connectionIndex": 0,
    "id": "test",
    "inUse": true,
    "type": "primary",
  },
  {
    "connectionIndex": 1,
    "id": "test",
    "inUse": false,
    "type": undefined,
  },
]
`;
